Add validation service with I18n messages

--- a/angular/src/assets/i18n/en.json
+++ b/angular/src/assets/i18n/en.json
@@ -5,5 +5,17 @@
   "languages": {
     "english": "English",
     "vietnamese": "Vietnamese"
+  },
+  "form_controls": {
+    "labels": {
+      "name": "Name",
+      "email": "Email",
+      "password": "Password"
+    }
+  },
+  "validation_error_messages": {
+    "required": "{{fieldName}} is required",
+    "minlength": "Minimum length of {{fieldName}} is {{validatorValue.actualLength}}/{{validatorValue.requiredLength}}",
+    "invalidEmailAddress": "Invalid email address"
   }
 }
