Config Angular router (without hash)

--- a/angular/src/assets/i18n/en.json
+++ b/angular/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "index": {
-    "title": "Welcome to Angular 4"
+    "title": "Welcome to Angular 4",
+    "register": "Register"
   },
   "languages": {
     "english": "English",
