Add dynamic layout

--- a/angular/src/assets/i18n/en.json
+++ b/angular/src/assets/i18n/en.json
@@ -1,7 +1,8 @@
 {
   "index": {
     "title": "Welcome to Angular 4",
-    "register": "Register"
+    "register": "Register",
+    "home": "Home"
   },
   "languages": {
     "english": "English",
