--- a/angular/src/assets/i18n/vi.json
+++ b/angular/src/assets/i18n/vi.json
@@ -1,7 +1,8 @@
 {
   "index": {
     "title": "Chào mừng bạn đến với Angular 4",
-    "register": "Đăng ký"
+    "register": "Đăng ký",
+    "home": "Trang chủ"
   },
   "languages": {
     "english": "Tiếng Anh",
