Angular interactive with Rails API

--- a/angular/src/assets/i18n/en.json
+++ b/angular/src/assets/i18n/en.json
@@ -8,6 +8,13 @@
     "english": "English",
     "vietnamese": "Vietnamese"
   },
+  "dashboard": {
+    "id": "ID",
+    "title": "Title",
+    "description": "Description",
+    "content": "Content",
+    "author": "Author"
+  },
   "form_controls": {
     "labels": {
       "name": "Name",
